--- a/.gitconfig
+++ b/.gitconfig
@@ -7,17 +7,17 @@
 	diff = auto
 	status = auto
 	branch = auto
-# [diff]
-# 	tool = meld
-# [difftool]
-# 	prompt = false
-# [difftool "meld"]
-# 	cmd = meld "$LOCAL" "$REMOTE"
-
 [diff]
-	tool = kdiff3
-[difftool "kdiff3"]
-	trustExitCode = false
+	tool = meld
+[difftool]
+	prompt = false
+[difftool "meld"]
+	cmd = meld "$LOCAL" "$REMOTE"
+
+# [diff]
+# 	tool = kdiff3
+# [difftool "kdiff3"]
+# 	trustExitCode = false
 
 [merge]
 	summary = true
@@ -25,6 +25,12 @@
 [mergetool "kdiff3"]
 	trustExitCode = false
 
+# [merge]
+#     tool = meld
+# [mergetool "meld"]
+#     # Choose one of these 2 lines (not both!) explained below.
+# #    cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+#     cmd = meld "$LOCAL" "$BASE" "$REMOTE" --output "$MERGED"
 
 [alias]
      df   = difftool
